--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "body-parser": "^2.2.0",
+        "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
-        "git-filter-repo": "^0.0.30",
         "mongoose": "^8.14.2"
     },
     "type": "module",
